[package]
name = "discord-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
twilight-http = "0.15"
twilight-gateway = "0.15"
twilight-model = "0.15"
twilight-util = { version = "0.15", features = ["builder"] }
tokio = { version = "1.28", features = ["full"] }
pushover = "0.4"  # Version mise à jour
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"